--- a/src/EventPlanning.Web/wwwroot/css/site.css
+++ b/src/EventPlanning.Web/wwwroot/css/site.css
@@ -11,6 +11,7 @@
 @import url('components/dashboard.css');
 @import url('components/event-form.css');
 @import url('components/event-details.css');
+@import url('components/pagination.css');
 
 @import url('components/admin/layout.css');
 @import url('components/admin/navigation.css');
